# wx-eye

./: .gitignore  CLAUDE.md  README.md  build.bat  disconnect_rdp.bat  disconnect_rdp_simple.bat  start.bat  start.ps1  start.sh  stop_monitor.py
.claude/: settings.local.json
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
backend/ai/: __init__.py  claude_analyzer.py  message_deduplicator.py  ocr_service.py  processor.py
backend/api/: routes.py  websocket.py
backend/capture/: __init__.py  comparator.py  screenshot.py  window.py
backend/events/: __init__.py  bus.py  subscriber.py  types.py
backend/services/: message_sender.py
backend/tests/: __init__.py  test_events.py  test_message_dedup.py  test_websocket_integration.py
examples/: subscriber_example.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AIMessagePanel.tsx  ChatPanel.tsx  ImageViewer.tsx  LogModal.tsx  LogPanel.tsx  Login.tsx  Monitor.tsx  SendMessagePanel.tsx  WindowDiscoverModal.tsx
frontend/src/hooks/: useWebSocket.ts
